# stream-duck-bi

./: .gitignore  Dockerfile  README.md  app.py  compose.yml  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json
src/: Home.py  app.py  page_link.py
src/infrastructure/: duckdb.py  s3_handler.py
src/pages/: CSV_Upload.py  s3_file_analyze.py
